cha-pre-live-flux2/cha-eks-5b/namespaces/lngedge-systest/network-policy-apps.yaml
####################################################
## Allow ingress from lngedge-systest and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-lngedge-systest
  namespace: lngedge-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: lngedge-systest
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from lngedge-systest ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-lngedge-systest
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: lngedge-systest

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#################################################
## Allow traffic to aws postgres db chbqhsdbst042v - Should be deleted after change to RDS ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-postgressdb
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.88.166/32
    ports:
    - port: 8050 
      protocol: TCP

#################################################
## Allow traffic to CHB RDS ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-rdspostgres
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.92.0/22
    ports:
    - port: 5432 
      protocol: TCP

##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP

---

################
## ICIS monitoring ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: lngedge-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

---

##################################################
## Allow external http traffic egress to CHA IDDN  ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-cha-iddn
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/22
    ports:
    - port: 8000
      protocol: TCP
    - port: 9100
      protocol: TCP
    - port: 10000
      protocol: TCP
    - port: 9000
      protocol: TCP

---

##################################################
## Allow external http traffic egress to CHB IDDN  ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-chb-iddn
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.88.0/21
    ports:
    - port: 8000
      protocol: TCP
    - port: 9100
      protocol: TCP
    - port: 10000
      protocol: TCP
    - port: 9000
      protocol: TCP

################################################
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-cha-ftp
  namespace: lngedge-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/22
    ports:
    - port: 21
      protocol: TCP
